# todoist-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  test_todoist_mcp_server.py  todoist_mcp_server.py
docs/: api-reference.md  installation.md
tests/: test_complete_task.py  test_create_label.py  test_create_project.py  test_create_task.py  test_delete_task.py  test_get_api.py  test_get_comments.py  test_get_labels.py  test_get_project.py  test_get_projects.py  test_get_task.py  test_get_tasks.py  test_reopen_task.py  test_to_dict.py  test_update_task.py
