[project]
name = "todoist-mcp-server"
version = "0.0.2"
description = "A Model Context Protocol server for Todoist integration"
authors = [{name = "Tim Sanders", email = "sanders.timothy.j@gmail.com"}]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.1",
    "todoist_api_python>=3.1.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1"
]